crates/ryft-macros-tests/tests/parameters/error_references.stderr
error: Ryft parameters must be owned. References are not allowed.
 --> tests/parameters/error_references.rs:7:18
  |
7 |     parameter_0: &'p P,
  |                  ^^^^^

error: Ryft parameters must be owned. References are not allowed.
 --> tests/parameters/error_references.rs:8:18
  |
8 |     parameter_1: &'p P,
  |                  ^^^^^

error: Ryft parameters must be owned. References are not allowed.
  --> tests/parameters/error_references.rs:14:34
   |
14 |     parameter_1: (P, (P, (usize, &'p P))),
   |                                  ^^^^^
